# Hackathone-2

./: git
phase_I/: .gitignore  README.md  pyproject.toml
phase_I/.claude/agents/: context-light-manager.md  priority-date-extractor.md  spec-guardian.md  spec-to-tasks.md  todo-intent-parser.md  todo-state-manager.md
phase_I/.claude/skills/: context-light-manager.md  priority-date-extractor.md  spec-guardian.md  spec-to-tasks.md  todo-intent-parser.md  todo-state-manager.md
phase_I/.specify/memory/: constitution.md
phase_I/history/prompts/001-todo-cli-core/: 001-todo-cli-spec.spec.prompt.md  002-implementation-plan.plan.prompt.md  003-task-decomposition.tasks.prompt.md  004-implementation-execution.implement.prompt.md  005-persistence-bug-fix.green.prompt.md
phase_I/history/prompts/002-colorful-cli/: 001-colorful-cli-specification.spec.prompt.md  002-colorful-cli-implementation-plan.plan.prompt.md  003-colorful-cli-task-generation.tasks.prompt.md  004-colorful-cli-implementation.green.prompt.md
phase_I/specs/001-todo-cli-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase_I/specs/002-colorful-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase_I/src/: __init__.py  interactive.py  main.py
phase_I/src/cli/: commands.py  display.py  formatting.py  welcome.py
phase_I/src/models/: task.py
phase_I/src/services/: task_manager.py
phase_I/src/storage/: __init__.py  json_storage.py
phase_I/src/utils/: __init__.py  colors.py
phase_I/tests/unit/: test_colors.py
phase_II/: .gitignore  README.md
(+303 files in other folders)
