[project]
name = "todo-cli-app"
version = "1.0.0"
description = "A command-line todo application with in-memory storage"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
todo = "src.main:main"
todo-interactive = "src.interactive:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
